kubernetes/apps/sobok/api/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app.kubernetes.io/name: api
  ports:
    - name: http
      port: 3002
      targetPort: http
